# experiment_1

./: .gitignore  README.md  pyproject.toml  railway.toml  requirements.txt  run_pipeline.py
api/: run_dev.py  server.py
api/routes/: export.py  images.py  runs.py  ws.py
arcite_rules/: __init__.py  openai_llm.py  rule_system.py
arcite_rules/rule_storage/: 47a87a49-33b9-4d09-bfd7-e5f550af964b.json
docs/: next-feature-human-in-loop.md  research-plan.md
docs/plans/: 2026-03-20-error-handling.md  2026-03-20-event-streaming.md  2026-03-21-nextjs-frontend.md  2026-03-22-adaptive-calibration.md
docs/research/: calibration-research.md
docs/specs/: 2026-03-22-adaptive-calibration-design.md
frontend/: tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ExportDropdown.tsx  ImageGrid.tsx  ProgressLog.tsx  Sidebar.tsx  StatsBar.tsx
frontend/lib/: api.ts  types.ts  ws.ts
tests/: test_calibrator.py  test_compiler.py  test_dataset_resolver.py  test_end_to_end.py  test_errors.py  test_event_bus.py  test_events.py  test_executor.py  test_pipeline.py  test_planner.py  test_recalibration_integration.py  test_recalibrator.py  test_reporter.py  test_retry.py  test_schemas.py  test_spec_generator.py  test_supervisor.py
tests/test_api/: test_export.py  test_images.py  test_runs.py
tests/test_persistence/: test_run_store.py  test_subscriber.py
tests/test_tools/: test_nvidia_nim_wrapper.py  test_openai_vision_wrapper.py  test_opencv_wrapper.py  test_registry.py  (+1 more)
validation_pipeline/: config.py  errors.py  event_bus.py  events.py  pipeline.py  retry.py
validation_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+56 files in other folders)
