[project]
name = "validation-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "instructor>=1.0",
    "openai>=1.0",
    "opencv-python>=4.8",
    "Pillow>=10.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
    "requests>=2.28",
    "pycocotools>=2.0",
    "psycopg2-binary>=2.9",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
gpu = [
    "pyiqa>=0.1.10",
    "torch>=2.0",
    "transformers>=4.36",
]
datasets = [
    "huggingface_hub>=0.20",
]
dev = [
    "pytest>=7.0",
    "python-dotenv>=1.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require API keys and network access",
]

[tool.setuptools.packages.find]
include = ["validation_pipeline*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
